feat: add Next.js web app and authenticated private client flow

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "dev": "bun run src/cli.ts",
     "dev:web": "vercel dev",
+    "dev:web:next": "bun --cwd my-bun-app run dev",
+    "build:web:next": "bun --cwd my-bun-app run build",
+    "private:scan": "bun run src/private-client.ts",
     "test": "bun test",
     "typecheck": "bunx tsc --noEmit",
     "build": "bun build src/cli.ts --compile --outfile dist/threatlens"
